fixed z-index issues with planetary and photo description

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -35,7 +35,7 @@
 }
 
 .descriptionContainer {
-    z-index: 0;
+    z-index: 1;
     position: relative;
     display: flex;
 
